# ibkr-mcp

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  deployment.md  development.md  troubleshooting.md  usage.md
specs/: implementation_plan.md  initial-spec.md  spec.md
src/ibkr_mcp/: __init__.py  __main__.py  config.py  connection.py  errors.py  logging_decorators.py  server.py
src/ibkr_mcp/models/: account.py  alerts.py  contracts.py  flex.py  market.py  orders.py  positions.py  server.py
src/ibkr_mcp/tools/: account.py  contracts.py  flex.py  market.py  orders.py  server.py
src/ibkr_mcp/utils/: black_scholes.py  contracts.py  durations.py
tests/: conftest.py  fake_ib.py  test_account_tools.py  test_alerts_tool.py  test_black_scholes.py  test_config.py  test_connection.py  test_contract_tools.py  test_contracts_util.py  test_duration_utils.py  test_errors.py  test_flex_tools.py  test_integration.py  test_logging_decorators.py  test_market_tools.py  test_order_tools.py  test_portfolio_greeks.py  test_server_bootstrap.py  test_server_tools.py
