[project]
name = "ibkr-mcp"
version = "0.1.0"
description = "Read-only MCP (Model Context Protocol) server exposing Interactive Brokers account and market data."
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "samir" }]
keywords = ["ibkr", "interactive-brokers", "mcp", "ib-async", "trading", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "ib_async>=0.9.86",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
ibkr-mcp = "ibkr_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ibkr_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# Tests mirror ib_async/IBKR camelCase identifiers in mocks and fixtures.
"tests/**/*.py" = ["N802", "N803", "N815"]
# Models and tools deliberately use camelCase fields to match the spec's JSON
# output schema (which mirrors the IBKR API). This is intentional.
"src/ibkr_mcp/models/*.py" = ["N815"]
"src/ibkr_mcp/tools/*.py" = ["N803", "N815"]
"src/ibkr_mcp/utils/*.py" = ["N803"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["ib_async.*", "ib_async"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring a live IB Gateway / TWS (skipped in CI)",
]
addopts = [
    "-ra",
    "--strict-markers",
]

[tool.coverage.run]
source = ["src/ibkr_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
